
AC_INIT(camellia, 1.0, [bug-author@xxx])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
            Makefile
            common/Makefile
            common/io/Makefile
            common/md5/Makefile
            common/cJSON/Makefile
            common/hashtable/Makefile
            src/Makefile
    ])

AC_OUTPUT

